# tree_menu

./: README.md  pyproject.toml
tree_menu/menu/: admin.py  models.py  views.py
tree_menu/menu/migrations/: 0001_initial.py
tree_menu/tree_menu/: asgi.py  settings.py  wsgi.py
